objects/ssot__EngagementChannelParticipant__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactPointId__c</fullName>
        <label>ContactPoint</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ContactPointObject__c</fullName>
        <label>Contact Point Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ConversationId__c</fullName>
        <label>Conversation</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelId__c</fullName>
        <label>Engagement Channel</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementParticipantAppRoleId__c</fullName>
        <label>Engagement Participant App Role</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementParticipantRole__c</fullName>
        <label>Engagement Participant Role</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Engagement Channel Participant Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__JoinedDateTime__c</fullName>
        <label>Joined DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LeftDateTime__c</fullName>
        <label>Left DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__MessagingSessionId__c</fullName>
        <label>Messaging Session</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NotificationDelaySecondsQuantity__c</fullName>
        <label>Notification Delay Seconds Quantity</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantDisplayName__c</fullName>
        <label>Participant Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantId__c</fullName>
        <label>Participant</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParticipantObject__c</fullName>
        <label>Participant Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SystemModstamp__c</fullName>
        <label>System Modified Stamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__VoiceCallId__c</fullName>
        <label>Voice Call</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__isMessageEchoDisabled__c</fullName>
        <label>is Message Echo Disabled</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009508379_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EngagementChannelParticipant_Partici_rel</label>
        <referenceTo>ssot__Lead__dlm</referenceTo>
        <relationshipLabel>EngagementChannelParticipant_Partici_rel</relationshipLabel>
        <relationshipName>rel_1702009508379_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009509243_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EngagementChannelParticipant_Partici_rel</label>
        <referenceTo>ssot__Bot__dlm</referenceTo>
        <relationshipLabel>EngagementChannelParticipant_Partici_rel</relationshipLabel>
        <relationshipName>rel_1702009509243_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009509750_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EngagementChannelParticipant_Partici_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>EngagementChannelParticipant_Partici_rel</relationshipLabel>
        <relationshipName>rel_1702009509750_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>